[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gsmart"
version = "0.1.2"
description = "Git Smart - AI-powered commit message generator"
readme = "README.md"
authors = [
    {name = "Reinier Hernández"},
    {name = "Rosniel Miguel"}
]
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
]
keywords = ["git", "commit", "ai", "openai", "anthropic", "claude", "gpt", "gemini", "mistral", "automation", "cli"]

dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "questionary>=2.0.0",
    "pyperclip>=1.8.0",
    "requests>=2.31.0",
    "anthropic>=0.18.0",
    "openai>=1.12.0",
    "google-generativeai>=0.3.0",
    "mistralai>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/Ross-cripto/gsmart-python"
Documentation = "https://github.com/Ross-cripto/gsmart-python#readme"
Repository = "https://github.com/Ross-cripto/gsmart-python"
"Bug Reports" = "https://github.com/Ross-cripto/gsmart-python/issues"

[project.scripts]
gsmart = "gsmart_cli:main"

[tool.setuptools]
packages = ["commands", "utils"]
py-modules = ["gsmart_cli", "constants"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
